Закончены слайдеры, перемещения, минификация

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8">
    <title>Microimpulse-test</title>
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="styles.min.css">
   </head>
   <body>
     <div class="wrapper">
@@ -82,23 +82,21 @@
 
       <div class="main">
         <div class="slider">
-
-
           <div class="slider__item slider__item--current">
             <div class="preview">
               <ul class="preview__list">
                 <li class="preview__item">
-                  <a class="preview__link preview__link--detective" href="#">
+                  <a id="shutterIsland" class="preview__link preview__link--detective" href="#">
                     <img src="img/poster-shutter-island.jpg" alt="Остров проклятых">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--detective" href="#">
+                  <a id="silenceLambs" class="preview__link preview__link--detective" href="#">
                     <img src="img/poster-the-silnce-of-the-lambs.jpg" alt="Молчание ягнят">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--detective" href="#">
+                  <a id="divergent" class="preview__link preview__link--detective" href="#">
                     <img src="img/poster-divergent.jpg" alt="Дивергент">
                   </a>
                 </li>
@@ -173,17 +171,17 @@
             <div class="preview">
               <ul class="preview__list">
                 <li class="preview__item">
-                  <a class="preview__link preview__link--fantastic" href="#">
+                  <a id="hungryGames" class="preview__link preview__link--fantastic" href="#">
                     <img src="img/poster-jenifer-hungry.jpg" alt="Голодные игры">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--fantastic" href="#">
+                  <a id="gameOfThrones" class="preview__link preview__link--fantastic" href="#">
                     <img src="img/poster-game-of-thrones.jpg" alt="Игра престолов">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--fantastic" href="#">
+                  <a id="hellboy" class="preview__link preview__link--fantastic" href="#">
                     <img src="img/poster-hellboy.jpg" alt="Хеллбой">
                   </a>
                 </li>
@@ -259,17 +257,17 @@
             <div class="preview">
               <ul class="preview__list">
                 <li class="preview__item">
-                  <a class="preview__link preview__link--thriller" href="#">
+                  <a id="inception" class="preview__link preview__link--thriller" href="#">
                     <img src="img/poster-inception.jpg" alt="Начало">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--thriller" href="#">
+                  <a id="brother" class="preview__link preview__link--thriller" href="#">
                     <img src="img/poster-brother.jpg" alt="Брат">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--thriller" href="#">
+                  <a id="avatar" class="preview__link preview__link--thriller" href="#">
                     <img src="img/poster-avatar.jpg" alt="Аватар">
                   </a>
                 </li>
@@ -344,17 +342,17 @@
             <div class="preview">
               <ul class="preview__list">
                 <li class="preview__item">
-                  <a class="preview__link preview__link--children" href="#">
+                  <a id="nuPogodi" class="preview__link preview__link--children" href="#">
                     <img src="img/poster-nu-pogodi.jpg" alt="Ну, погоди!">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--children" href="#">
+                  <a id="zootopia" class="preview__link preview__link--children" href="#">
                     <img src="img/poster-zootopia.jpg" alt="Зверополис">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--children" href="#">
+                  <a id="lionKing" class="preview__link preview__link--children" href="#">
                     <img src="img/poster-the-lion-king.jpg" alt="Король Лев">
                   </a>
                 </li>
@@ -429,17 +427,17 @@
             <div class="preview">
               <ul class="preview__list">
                 <li class="preview__item">
-                  <a class="preview__link preview__link--comedy" href="#">
+                  <a id="intouchables" class="preview__link preview__link--comedy" href="#">
                     <img src="img/poster-intouchables.jpg" alt="1+1 Неприкасаемые">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--comedy" href="#">
+                  <a id="gentlemen" class="preview__link preview__link--comedy" href="#">
                     <img src="img/poster-the-gentlemen.jpg" alt="Джентельмены">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--comedy" href="#">
+                  <a id="operationShurick" class="preview__link preview__link--comedy" href="#">
                     <img src="img/poster-operaion-shurick.jpg" alt="Операция 'Ы' и другие приключенгия Шурика">
                   </a>
                 </li>
@@ -514,17 +512,17 @@
             <div class="preview">
               <ul class="preview__list">
                 <li class="preview__item">
-                  <a class="preview__link preview__link--melodrama" href="#">
+                  <a id="titanic" class="preview__link preview__link--melodrama" href="#">
                     <img src="img/poster-titanic.jpg" alt="Титаник">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--melodrama" href="#">
+                  <a id="moscowCry" class="preview__link preview__link--melodrama" href="#">
                     <img src="img/poster-moscow-never-cry.jpg" alt="Москва слезам не верит">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--melodrama" href="#">
+                  <a id="eternalSunshine" class="preview__link preview__link--melodrama" href="#">
                     <img src="img/poster-eternal-sunshine.jpg" alt="Вечное сияние чистого разума">
                   </a>
                 </li>
@@ -599,17 +597,17 @@
             <div class="preview">
               <ul class="preview__list">
                 <li class="preview__item">
-                  <a class="preview__link preview__link--adventures" href="#">
+                  <a id="harry" class="preview__link preview__link--adventures" href="#">
                     <img src="img/poster-harry.jpg" alt="Гарри Поттер и филосовский камень">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--adventures" href="#">
+                  <a id="brilliant" class="preview__link preview__link--adventures" href="#">
                     <img src="img/poster-brilliant.jpg" alt="Бриллиантовая рука">
                   </a>
                 </li>
                 <li class="preview__item">
-                  <a class="preview__link preview__link--adventures" href="#">
+                  <a id="lordRings" class="preview__link preview__link--adventures" href="#">
                     <img src="img/poster-the-lord-of-the-rings.jpg" alt="Властелин колец: Братство кольца">
                   </a>
                 </li>
@@ -684,6 +682,6 @@
 
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="index.min.js"></script>
    </body>
 </html>
