--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8">
    <title>Microimpulse-test</title>
-   <link rel="stylesheet" href="styles.min.css">
+   <link rel="stylesheet" href="css/styles.min.css">
   </head>
   <body>
     <div class="wrapper">
