--- a/index.html
+++ b/index.html
@@ -682,6 +682,6 @@
 
       </div>
     </div>
-    <script src="index.min.js"></script>
+    <script src="js/index.min.js"></script>
    </body>
 </html>
