--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
  <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-   <title>Microimpulse-test</title>
+   <title>Cinema</title>
    <link rel="stylesheet" href="css/styles.min.css">
   </head>
   <body>
